<resources>
    <string name="app_name">BluetoothBLE1</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="scanButton">Scan</string>
    <string name="no_device_selected">No Device Selected</string>
    <string name="select_device">Select Device</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="cancel">Cancel</string>
    <string name="not_connected">Not Connected</string>
    <string name="cylon">Cylon</string>
    <string name="arrow">Arrow</string>
    <string name="single">Single</string>
</resources>
